2009-06-20  Marcus Brinkmann  <marcus@g10code.com>

	* m4/gpg4win.m4 (GPG4WIN_IPKG, GPG4WIN_SPKG, GPG4WIN_BPKG,
	GPG4WIN_MPKG): Define new substitution variables
	gpg4win_pkg_PKGNAME_deps, to transfer the knowledge of the
	dependency tree to the Makefiles.
	* src/gpg4win.mk.in (SPKG_template, BPKG_template): Wrap it in a
	test for package name being NO.
	(pkg_files): New variable, listing all package files.
	(VERSIONINFO_macro): Removed.
	(GETDEPS): New macro.
	* src/Makefile.am (versioninfo.txt): Use pkg_files to create versioninfo.txt.

2009-06-20  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GPA.

2009-06-19  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Add Scute.  Update GpgOL.

	* src/inst-scute.nsi: Need to use libscute-0.dll now.

2009-06-19  Marcus Brinkmann  <marcus@g10code.de>

	* src/Makefile.am (gpg4win_pkg_scute_configure): Fix typo, should
	have been gpg-error, not gpgme.

	* Makefile.am (EXTRA_DIST): Fix path to gnupg2 patch file.

2009-06-19  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* NEWS: Change compendium version.

	* configure.ac: Change compendium date and version (de).

2009-06-19  Marcus Brinkmann  <marcus@g10code.com>

	* packages/packages.current: Update pinentry to 0.7.6.

2009-06-18  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Use name directive for kdesupport.

2009-06-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kdesupport.

2009-06-18  Marcus Brinkmann  <marcus@g10code.com>

	* packages/packages.current: Update gpgme to 1.2.0.

2009-06-18  Werner Koch  <wk@g10code.com>

	* NEWS: Remove unneeded info about the 1.9 beta releases.

	* patches/gnupg2-2.0.9/01-scd-pw2.patch: New.

2009-06-17  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kdesupport.

2009-06-17  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GnuPG and Dirmngr.
